# dbt-flink-adapter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.env  tox.ini
.github/workflows/: main.yml  prepare-release.yml  publish.yml
dbt/adapters/flink/: __init__.py  connections.py  constants.py  handler.py  impl.py  query_hints_parser.py  relation.py
dbt/include/flink/: dbt_project.yml  profile_template.yml
envs/flink-1.16/: docker-compose.yml
envs/flink-1.17/: docker-compose.yml
envs/kafka/: docker-compose.yml
envs/postgres/: database.env  docker-compose.yml
flink/sqlgateway/: client.py  config.py  operation.py  operations_freq.py  result_parser.py  schema_operations.py  session.py  statement.py
project_example/: dbt_project.yml
tests/: conftest.py
tests/adapters/flink/: test_query_hints_parser.py
tests/component/: assert_utils.py  test_assert_utils.py
tests/component/e2e/: test_seeds.py
tests/component/mock_gw/: assert_utils.py  gw_backend.py  gw_handle_dummy.py  gw_handle_plus.py  mock_gw.py
tests/component/tests/: test_assert_utils.py  test_cursor_against_gw.py  test_gw_backend.py  test_gw_handle_plus.py  test_mock_gw.py  test_seeds.py  test_seeds_require_drop.py  test_seeds_with_gw.py
tests/demo/flink_dbt_adapter_demo/: dbt_project.yml
tests/functional/adapter/: fixtures.py  test_basic.py  test_seeds.py  (+2 more)
tests/sqlgateway/: test_operations_freq.py  test_result_parser.py  test_schema_operations.py
tests/tmp/: test_mock_gw.py  tmp.py  tmp2.py
(+39 files in other folders)
